--- a/admin/src/components/lab_components/AvailableServices.css
+++ b/admin/src/components/lab_components/AvailableServices.css
@@ -22,7 +22,7 @@ body {
     border-radius: 5px;
     padding: 15px;
     box-sizing: border-box;
-    height: auto;
+    height: 30px;
     justify-content: space-evenly;
     align-items: center;
     justify-items: center;
@@ -31,27 +31,22 @@ body {
 /* Filter Section */
 
 .filter-section {
-    display: flex;
-    justify-content: flex-end; /* Adjusted to evenly distribute the elements */
+    display: flex; /* Adjusted to evenly distribute the elements */
     align-items: center;
-    width: 95%;
+    width: 93.4%;
     padding: 15px;
-    height: 40px;
-  }
-
-  .filter-forms {
-    display: flex;
+    height: 15px;
+    background-color: rgb(214, 214, 208);
     align-items: center;
+    border-radius: 8px;
   }
-  
-  /* Sort By Dropdown */
-  
-  #sort {
-    margin-right: 10px;
-    height: 25px;
-    border-radius: 5px;
-    border-style: none;
 
+  .filter-section Input {
+    width: 300px;
+  }
+
+  .filter-section h3 {
+    margin-right: 330px;
   }
   
   /* Search Input */l
@@ -118,10 +113,11 @@ body {
   
   .service-item {
     background-color: #d9e9e5af;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    margin-top: 8px;
     padding: 10px; 
     border-radius: 10px;
-    height: auto;
+    height:360px;
   }
   
   .service-header {
